@@ -1,4 +1,7 @@
 2006-08-14	blytkerchan
+	* Visitor.h: add documentation
+	* VisitorTraits.h: ditto
+
 	* documentation.hpp: add documentation
 	* SubjectTraits.h: ditto
 	* TraversalPolicy.h: ditto
